Change css, html and img

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport"
 	content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -61,32 +61,34 @@
 	</section>
 
 	<section class="text-box">
-		<div class="container">
-						<div class="row">
-				<div class="col-lg-11 title-box">
+		<div class="container-full-width">
+			<div class="row">
+				<div class="col-lg-10 title-box">
 					<h1 class="text-box__title">
 						I'm like the Robin Hood of PSD files.
 					</h1>
 				</div>
 				
-				<div class="col-lg-1 text-box__angel">
-					<i class="fas fa-angle-right text-box__icon"></i>
+				<div class="col-lg-2 text-box__angel">
+					<a href="#" class="text-box__href"><i class="fas fa-angle-right text-box__icon"></i></a>
 				</div>
 			</div>
 		</div>
 	</section>
 
 	<section class="foto-box">
-		<div class="container">
+		<div class="container-full-width">
 			<div class="row">
-				<div class="col-lg-4">
-					<img src="img/1.png" alt="1">
+				<div class="col-lg-4 no-padding">
+					<img src="img/01.png" alt="1" class="foto-box__img">
 				</div>
-				<div class="col-lg-4">
-					<img src="img/2.png" alt="2">
+				<div class="col-lg-4 no-padding">
+					<img src="img/02.png" alt="2"
+					class="foto-box__img">
 				</div>
-				<div class="col-lg-4">
-					<img src="img/3.png" alt="3">
+				<div class="col-lg-4 no-padding">
+					<img src="img/03.png" alt="3"
+					class="foto-box__img">
 				</div>
 			</div>
 		</div>	
@@ -97,34 +99,31 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<h2 class="title__main">
-						BlazRobar.com
+						<a href="#" class="title-main__href">BlazRobar.com</a>
 					</h2>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-lg-6">
 					<div class="title">
-						<p class="title__text">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate suscipit impedit architecto cum itaque laboriosam ipsam non? Officiis, incidunt, ducimus. Eaque, modi quia perferendis perspiciatis et totam nisi aliquam provident. <br/><br/>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae culpa, repellendus aspernatur aliquid reprehenderit perspiciatis libero enim ullam harum amet accusamus deserunt omnis id rerum architecto natus iste ratione illo.
-						</p>
-					</div>
+						<p class="title__text m-bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae culpa, repellendus aspernatur aliquid reprehenderit perspiciatis libero enim ullam harum amet accusamus deserunt omnis id rerum architecto natus iste ratione illo.</p>
+						<p class="title__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae culpa, repellendus aspernatur aliquid reprehenderit perspiciatis libero enim ullam harum amet accusamus deserunt omnis id rerum architecto natus iste ratione illo.</p>
+					</p>
 				</div>
+			</div>
 
-				<div class="col-lg-6">
-					<div class="title">
-						<p class="title__text">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate suscipit impedit architecto cum itaque laboriosam ipsam non? Officiis, incidunt, ducimus. Eaque, modi quia perferendis perspiciatis et totam nisi aliquam provident. <br/><br/>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae culpa, repellendus aspernatur aliquid reprehenderit perspiciatis libero enim ullam harum amet accusamus deserunt omnis id rerum architecto natus iste ratione illo.
-						</p>
-					</div>
+			<div class="col-lg-6">
+				<div class="title">
+					<p class="title__text m-bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae culpa, repellendus aspernatur aliquid reprehenderit perspiciatis libero enim ullam harum amet accusamus deserunt omnis id rerum architecto natus iste ratione illo.</p>
+					<p class="title__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae culpa, repellendus aspernatur aliquid reprehenderit perspiciatis libero enim ullam harum amet accusamus deserunt omnis id rerum architecto natus iste ratione illo.</p>
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
+</section>
 
-	<footer id="footer" class="footer">
-		
-	</footer>
+<footer id="footer" class="footer">
+
+</footer>
 </body>
 </html>
